# tictactoe

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: gui.cpp  gui.h
src/core/: controller.h  game.cpp  game.h  player.cpp  player.h  types.h
